--- a/src/delineadores.html
+++ b/src/delineadores.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navegation">
         <div class="navegation-logo">
-            <a href="/src/index.html"><img src="/assets/icons/logo.png"  alt="logo"></a>
+            <a href="/index.html"><img src="/assets/icons/logo.png"  alt="logo"></a>
             
         </div>
         <ul>
@@ -55,6 +55,6 @@
         </div>
     </footer>
 
-    <script src="./delineador.js"></script>
+    <script src="./js/delineador.js"></script>
 </body>
 </html>
