--- a/src/labiales.html
+++ b/src/labiales.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navegation">
         <div class="navegation-logo">
-            <a href="/src/index.html"><img src="/assets/icons/logo.png"  alt="logo"></a>
+            <a href="/index.html"><img src="/assets/icons/logo.png"  alt="logo"></a>
             
         </div>
         <ul>
@@ -80,6 +80,6 @@
             <img src="/assets/icons/twitter.png" alt="twitter">
         </div>
     </footer>
-    <script src="./labiales.js"></script>
+    <script src="./js/labiales.js"></script>
 </body>
 </html>
