--- a/src/rubores.html
+++ b/src/rubores.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navegation">
         <div class="navegation-logo">
-            <a href="/src/index.html"><img src="/assets/icons/logo.png"  alt="logo"></a>
+            <a href="/index.html"><img src="/assets/icons/logo.png"  alt="logo"></a>
             
         </div>
         <ul>
@@ -53,6 +53,6 @@
         </div>
     </footer>
 
-    <script src="./rubores.js"></script>
+    <script src="./js/rubores.js"></script>
 </body>
 </html>
