responsive ajustado, carrousel y logica del carrito

--- a/src/delineadores.html
+++ b/src/delineadores.html
@@ -10,22 +10,25 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <nav class="navegation">
-        <div class="navegation-logo">
-            <a href="/index.html"><img src="/assets/icons/logo.png"  alt="logo"></a>
-            
-        </div>
-        <ul>
-            <li><a href="/src/rubores.html">Rubores</a></li>
-            <li><a href="/src/delineadores.html">Delineadores</a></li>
-            <li><a href="/src/sombras.html">Sombras</a></li>
-            <li><a href="/src/labiales.html">Labiales</a></li>
-            <li><a href="/src/esmaltes.html">Esmaltes</a></li>
+    <header>
+        <nav class="navigation">
+          <a href="/index.html"
+          ><img class="navigation-logo" src="/assets/icons/logo.png" alt="logo"
+        /></a>
+        <ul class="navigation-links">
+          <li><a href="/src/rubores.html">Rubores</a></li>
+          <li><a href="/src/delineadores.html">Delineadores</a></li>
+          <li><a href="/src/sombras.html">Sombras</a></li>
+          <li><a href="/src/labiales.html">Labiales</a></li>
+          <li><a href="/src/esmaltes.html">Esmaltes</a></li>
         </ul>
-        <div class="navegation-car">
-            <img src="/assets/icons/car.png" alt="carrito de compra">
-        </div>
-    </nav>
+        <button class="navigation-hamburger" type="button">
+          <span class="navigation-hamburger-1"></span>
+          <span class="navigation-hamburger-2"></span>
+          <span class="navigation-hamburger-3"></span>
+        </button>
+        
+      </header>
     <section class="delineadores">
         <h2>Delineadores</h2>
         <div class="delineadores-firstBlock">
